fix: remove old typeahead styling — particularly visible on Safari

--- a/packages/uikit-workshop/src/sass/scss/05-themes/_light-theme.scss
+++ b/packages/uikit-workshop/src/sass/scss/05-themes/_light-theme.scss
@@ -79,13 +79,6 @@
     background-color: $pl-color-gray-13 !important;
   }
 
-  /**
-     * Typeahead input
-     */
-  .pl-c-typeahead {
-    background-color: $pl-color-gray-13 !important;
-    color: $pl-color-gray-70 !important;
-  }
 
   /**
      * Typeahead input
